Update html css js

--- a/z-trip/shoppingcar/index.html
+++ b/z-trip/shoppingcar/index.html
@@ -174,7 +174,7 @@
             <p>特殊折扣 - $ 1,380</p>
             <p class="all">結帳金額 <span>$ 17,420</span></p>
         </div>
-        <p class="btn_org"><a class="goto_step2">下一步</a></p>
+        <p class="bt_btn"><a class="btn_org goto_step2">下一步</a></p>
     </section>
 
     <!-- 填寫資訊 - 內容 -->
@@ -359,7 +359,7 @@
                 </div>
             </div>
         </form>
-        <p class="btn_org"><a class="goto_step3">下一步</a></p>
+        <p class="bt_btn"><a class="btn_org goto_step1">上一步</a><a class="btn_org goto_step3">下一步</a></p>
     </section>
 
     <!-- 付款/發票資訊 - 內容 -->
@@ -458,13 +458,13 @@
             </li>
         </ul>
 
-        <p class="btn_org btn_red no_function"><a href="#">確認送出</a></p>
+        <p class="bt_btn "><a class="btn_org goto_step2">上一步</a><a class="btn_org btn_red no_function" href="#">確認送出</a></p>
     </section>
 
     <div class="contents_box total_amount for_mob_total clearfix">
         <p>已折扣 $ 1,380</p> <!-- 看這些折扣資訊是要併成一行?，還是? -->
         <p class="all">結帳金額 <span>$ 17,420</span></p>
-        <p class="btn_org btn_red no_function"><a href="#">確認送出</a></p>
+        <p class="bt_btn"><a class="btn_org btn_red no_function" href="#">確認送出</a></p>
     </div>
 </main>
 
