Updete html + css

--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
     function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("mySidenav").style.width = "350px";
     }
 
     function closeNav() {
@@ -65,7 +65,7 @@
 <header class="HeaderBox">
     <section class="Menu ContentsBox clearfix">
         <h1 class="logo"><a target="_blank" href="http://www.welovetour.com.tw/">年代旅遊</a></h1>
-        <p class="the_mob_btn" onclick="openNav()"><span>MENU</span> &#9776; </p>
+        <p class="the_mob_btn" onclick="openNav()"><span class="title">MENU</span><span class="icon_hamburger"></span></p>
         <nav class="TopBox clearfix">
             <ul class="top_menu clearfix">
                 <li>
@@ -88,7 +88,7 @@
                     <ul class="sub_menu">
                         <li><p><a target="_blank" href="http://www.welovetour.com.tw/newyear/newyear.html">春節預購</a></p></li>
                         <li><p><a target="_blank" href="http://www.welovetour.com.tw/2018DragonBoat/tour.html">本季促銷</a></p></li>
-                        <li><p><a target="_blank" href="http://www.welovetour.com.tw/top/top.html"></a>十大熱門旅遊地</p></li>
+                        <li><p><a target="_blank" href="http://www.welovetour.com.tw/top/top.html">十大熱門旅遊地</a></p></li>
                     </ul>
                 </li>
                 <li>
@@ -123,16 +123,17 @@
 
 <section class="fixed_go_menu">
     <p class="link">
-        <a class="go_01">出團日期</a>
-        <a class="go_02">行程路線</a>
-        <a class="go_03">行程特色</a>
-        <a class="go_04">參考航班</a>
-        <a class="go_05">每日行程</a>
+        <a class="go_01 mob_none">出團日期</a>
+        <a class="go_02 mob_none">行程路線</a>
+        <a class="go_03 mob_none">行程特色</a>
+        <a class="go_04 mob_none">參考航班</a>
+        <a class="go_05 mob_none">每日行程</a>
         <a class="go_00">回最上方</a>
     </p>
 </section>
 
 <main class="Main_Contents">
+    <section class="main_banner"></section>
     <section class="travel_name" id="move_goto_01">
         <div class="ContentsBox">
             <h2 class="main_title">2019新春特別企劃【中越峴港悅椿渡假村5天】<br>
