add bottom tools

--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -17,11 +17,11 @@
 
 <script type="text/javascript">
     function openNav() {
-      document.getElementById("mySidenav").style.width = "350px";
+      document.getElementById("theSidenav").style.width = "350px";
     }
 
     function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("theSidenav").style.width = "0";
     }
 </script>
 
@@ -53,12 +53,60 @@
     <script src="js/script-right.js"></script> -->
 
 
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+<div class="sidenav" id="theSidenav">
+  <div class="side_Contents">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <ul class="side_menu clearfix">
+    <li>
+        <h3>熱搜精選</h3>
+        <ul class="sub_menu">
+            <li><p><a target="_blank" href="http://www.welovetour.com.tw/samui.html">蘇美島</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/boracay.html">長灘島</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/bali.html">峇里島</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/maldives.html">馬爾地夫</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/vietnam.html">中越峴港</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/thailand.html">泰國</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/philippines.html">菲律賓</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/angkorwat.html">吳哥窟</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/Palau.html">帛琉</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/okinawa.html">沖繩</a></p></li>
+            </ul>
+        </li>
+        <li>
+            <h3>發燒話題</h3>
+            <ul class="sub_menu">
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/newyear/newyear.html">春節預購</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/2018DragonBoat/tour.html">本季促銷</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/top/top.html">十大熱門旅遊地</a></p></li>
+            </ul>
+        </li>
+        <li>
+            <h3>主題旅遊</h3>
+            <ul class="sub_menu">
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/overseawedding.html">海外婚禮</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/staff_trip.html">員工旅遊</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/graduationtravel.html">畢業旅行</a></p></li>
+            </ul>
+        </li>
+        <li>
+            <h3>更多行程</h3>
+            <ul class="sub_menu">
+                <li><p><a target="_blank" href="http://cs.sabretn.com.tw/welovetour/index2">國際機票</a></p></li>
+                <li><p><a target="_blank" href="http://welovetour.richmondgroup.com.tw/OverseaBBC.asp?area=00NA">聯營團體旅遊</a></p></li>
+                <li><p><a target="_blank" href="http://www.welovetour.com.tw/china.html">大陸專區</a></p></li>
+            </ul>
+        </li>
+        <li>
+            <h3 class="none_arr"><a target="_blank" href="http://www.welovetour.com.tw/about.html">關於年代</a></h3>
+        </li>
+    </ul>
+    <p class="social_box">
+        <a class="googlefrom" target="_blank" title="線上表單" href="https://docs.google.com/forms/d/e/1FAIpQLSf5rGH0fDpapPmZpNTt6g34ZaK6A126VqQwd8_aU3aPBdxE3Q/viewform"></a>
+        <a class="line" target="_blank" title="台北line" href="https://line.me/ti/p/%40hcn6976x"></a>
+        <a class="facebook" target="_blank" title="Facebook" href="https://www.facebook.com/weloveisland/"></a>
+        <a class="youtube" target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCblEym6jb1pGe8zTT5IzOFg"></a>
+    </p>
+    </div>
 </div>
 
 
@@ -132,13 +180,27 @@
     </p>
 </section>
 
+<section class="fixed_bottom_tools">
+    <ul class="clearfix">
+        <li><p><a class="line" target="_blank" href="https://line.me/ti/p/%40hcn6976x">台北詢問</a></p></li>
+        <li><p><a class="phone" href="tel:+886-2-7713-7719">台北總部</a></p></li>
+        <li><p><a class="google" target="_blank" href="https://goo.gl/forms/tCBLlgqZTrHyUMEE3">線上表單</a></p></li>
+        <li><p><a class="line" target="_blank" href="https://line.me/R/ti/p/%40pmz3588z">台中詢問</a></p></li>
+        <li><p><a class="phone" href="tel:+886-4-3704-7719">台中門市</a></p></li>
+    </ul>
+</section>
+
 <main class="Main_Contents">
     <section class="main_banner"></section>
-    <section class="travel_name" id="move_goto_01">
+    <h2 class="travel_main_title">2019新春特別企劃【中越峴港悅椿渡假村5天】<br><span>第二人-10000    特惠39,000起</span></h2>
+    <p class="mob_go_menu clearfix">
+        <a class="s_go_03">行程特色</a>
+        <a class="s_go_04">參考航班</a>
+        <a class="s_go_05">每日行程</a>
+        <a class="s_go_01">出團日期</a>
+    </p>
+    <section class="travel_date_departure" id="move_goto_01">
         <div class="ContentsBox">
-            <h2 class="main_title">2019新春特別企劃【中越峴港悅椿渡假村5天】<br>
-                <span>第二人-10000    特惠39,000起</span>
-            </h2>
             <div class="trip_date_list">
                 <p class="top_title">邁向14周年促銷，每周三&五出發<br>
                 原價 31,900，第二人 -6,000(含稅簽)</p>
