Update html & css : sidemenu

--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -15,16 +15,6 @@
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/goto.js"></script>
 
-<script type="text/javascript">
-    function openNav() {
-      document.getElementById("theSidenav").style.width = "350px";
-    }
-
-    function closeNav() {
-      document.getElementById("theSidenav").style.width = "0";
-    }
-</script>
-
 </head>
 
 
@@ -59,11 +49,11 @@
   <ul class="side_menu clearfix">
     <li>
         <h3>熱搜精選</h3>
-        <ul class="sub_menu">
+        <ul class="sub_menu clearfix">
             <li><p><a target="_blank" href="http://www.welovetour.com.tw/samui.html">蘇美島</a></p></li>
-                <li><p><a target="_blank" href="http://www.welovetour.com.tw/boracay.html">長灘島</a></p></li>
-                <li><p><a target="_blank" href="http://www.welovetour.com.tw/bali.html">峇里島</a></p></li>
-                <li><p><a target="_blank" href="http://www.welovetour.com.tw/maldives.html">馬爾地夫</a></p></li>
+            <li><p><a target="_blank" href="http://www.welovetour.com.tw/boracay.html">長灘島</a></p></li>
+            <li><p><a target="_blank" href="http://www.welovetour.com.tw/bali.html">峇里島</a></p></li>
+            <li><p><a target="_blank" href="http://www.welovetour.com.tw/maldives.html">馬爾地夫</a></p></li>
                 <li><p><a target="_blank" href="http://www.welovetour.com.tw/vietnam.html">中越峴港</a></p></li>
                 <li><p><a target="_blank" href="http://www.welovetour.com.tw/thailand.html">泰國</a></p></li>
                 <li><p><a target="_blank" href="http://www.welovetour.com.tw/philippines.html">菲律賓</a></p></li>
@@ -101,8 +91,6 @@
         </li>
     </ul>
     <p class="social_box">
-        <a class="googlefrom" target="_blank" title="線上表單" href="https://docs.google.com/forms/d/e/1FAIpQLSf5rGH0fDpapPmZpNTt6g34ZaK6A126VqQwd8_aU3aPBdxE3Q/viewform"></a>
-        <a class="line" target="_blank" title="台北line" href="https://line.me/ti/p/%40hcn6976x"></a>
         <a class="facebook" target="_blank" title="Facebook" href="https://www.facebook.com/weloveisland/"></a>
         <a class="youtube" target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCblEym6jb1pGe8zTT5IzOFg"></a>
     </p>
@@ -112,7 +100,7 @@
 
 <header class="HeaderBox">
     <section class="Menu ContentsBox clearfix">
-        <h1 class="logo"><a target="_blank" href="http://www.welovetour.com.tw/">年代旅遊</a></h1>
+        <h3 class="logo"><a target="_blank" href="http://www.welovetour.com.tw/">年代旅遊</a></h3>
         <p class="the_mob_btn" onclick="openNav()"><span class="title">MENU</span><span class="icon_hamburger"></span></p>
         <nav class="TopBox clearfix">
             <ul class="top_menu clearfix">
@@ -192,7 +180,8 @@
 
 <main class="Main_Contents">
     <section class="main_banner"></section>
-    <h2 class="travel_main_title">2019新春特別企劃【中越峴港悅椿渡假村5天】<br><span>第二人-10000    特惠39,000起</span></h2>
+    <h1 class="travel_main_title">2019新春特別企劃【中越峴港悅椿渡假村5天】</h1>
+    <h2 class="travel_sub_title">第二人-10000    特惠39,000起</h2>
     <p class="mob_go_menu clearfix">
         <a class="s_go_03">行程特色</a>
         <a class="s_go_04">參考航班</a>
