--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -567,7 +567,7 @@
                     <div>
                         <p class="social_box">
                             <a class="googlefrom" target="_blank" title="線上表單" href="https://docs.google.com/forms/d/e/1FAIpQLSf5rGH0fDpapPmZpNTt6g34ZaK6A126VqQwd8_aU3aPBdxE3Q/viewform"></a>
-                            <a class="line_icon_icon" target="_blank" title="台北line" href="https://line.me/ti/p/%40hcn6976x"></a>
+                            <a class="line_icon" target="_blank" title="台北line" href="https://line.me/ti/p/%40hcn6976x"></a>
                             <a class="facebook" target="_blank" title="Facebook" href="https://www.facebook.com/weloveisland/"></a>
                             <a class="youtube" target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCblEym6jb1pGe8zTT5IzOFg"></a>
                         </p>
