Update html  + css

--- a/welovetour/other_page/index.html
+++ b/welovetour/other_page/index.html
@@ -19,13 +19,13 @@
 	<meta property="og:image" content="http://www.welovetour.com.tw/images/main/taipei/index-banner1.jpg"/>
 	<meta property="og:url" content="http://www.welovetour.com.tw/tachung/index.html">
 	<meta property="og:type" content="旅遊">
-	<link rel="icon" href="http://www.welovetour.com.tw/images/main/favicon.ico"/>
+	<link rel="icon" href="http://www.welovetour.com.tw/images/favicon.ico"/>
 
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/misc.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.css"> <!-- Feb. 2019 新增 header footer CSS -->
 	
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/goto.js"></script>
