--- a/welovetour/other_page/samui.html
+++ b/welovetour/other_page/samui.html
@@ -15,6 +15,7 @@
 	<meta name="description" content="蘇美島旅遊專家-年代旅遊，十多年來致力海島旅遊，以專業經驗為您打造高品質旅遊，代理蘇美島頂級飯店W hotel、悅榕庄BanyanTree等，近年來業務更擴展到海島婚禮，海外婚拍，蜜月旅行推薦旅行社|年代旅遊"/>
 	<meta name="keywords" content="蘇美島,蘇梅島,蘇美島蜜月"/>
 	<link rel="alternate" hreflang="zh-TW" href="http://www.welovetour.com.tw/samui.html" />
+	<link rel="icon" href="http://www.welovetour.com.tw/images/main/favicon.ico"/>
 	<!--
 	<link rel="amphtml"  href="http://www.welovetour.com.tw/amp/story/samui.html">
 	-->
