--- a/welovetour/index.html
+++ b/welovetour/index.html
@@ -8,10 +8,12 @@
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="http://www.welovetour.com.tw/images/main/favicon.ico"/>
+    <link rel="icon" href="http://www.welovetour.com.tw/images/favicon.ico"/>
+
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/goto.js"></script>
+
 </head>
 
 
