Update html css

--- a/welovetour/other_page/index.html
+++ b/welovetour/other_page/index.html
@@ -29,6 +29,15 @@
 	
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/goto.js"></script>
+	<!-- <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script> -->
+
+	<!-- test -->
+	<script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
+	<link rel="stylesheet" href="on-server/css/fontawesome-all.css">
+	<style type="text/css">
+		.flex-direction-nav a:before{ font-family: 'Font Awesome 5 Free'; font-weight: bold; }
+	</style>
+
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -691,7 +700,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </footer>
 
 
-<div id="gotop"><img src="http://www.welovetour.com.tw/images/main/scroll-to-top.png" width="60" height="46"></div>
+<div id="gotop"></div>
 
 <!-- <div class="line_iconform">
 	<a class="bline1 bline1-lm" href="tel:02-7713-7719"><img src="images/phone2.png"></a>
