--- a/welovetour/other_page/samui.html
+++ b/welovetour/other_page/samui.html
@@ -31,6 +31,15 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/goto.js"></script>
+	<!-- <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script> -->
+	
+	<!-- test -->
+	<script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
+	<link rel="stylesheet" href="on-server/css/fontawesome-all.css">
+	<style type="text/css">
+		.flex-direction-nav a:before{ font-family: 'Font Awesome 5 Free'; font-weight: bold; }
+	</style>
+
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -42,7 +51,9 @@
 	
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
-
+	<style type="text/css">
+		.flex-direction-nav a:before{ font-family: 'Font Awesome 5 Free'; font-weight: bold; }
+	</style>
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WB36KSZ"
@@ -1001,7 +1012,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
     </footer>
 
-<div id="gotop"><img src="http://www.welovetour.com.tw/images/scroll-to-top.png" width="60" height="46"></div>
+<div id="gotop"></div>
 <!-- 頁尾聯絡表單 -->
 <!-- <div class="lineform">
 	<a class="bline1 bline1-lm" href="tel:02-7713-7719"><img src="images/phone2.png"></a>
