change css style for sidemenu

--- a/caa/index.html
+++ b/caa/index.html
@@ -61,12 +61,27 @@
             <li>
                 <h3>訊息專區</h3>
                 <p><a href="#">副標</a></p>
+                <ul class="mob_submenu">
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                </ul>
                 <p><a href="#">副標</a></p>
+                <ul class="mob_submenu">
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                </ul>
             </li>
             <li>
                 <h3>學習專區</h3>
                 <p><a href="#">學習專區</a></p>
                 <p><a href="#">常見問答</a></p>
+                <ul class="mob_submenu">
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                    <li><p><a href="#">我是子選單</a></p></li>
+                </ul>
             </li>
             <li>
                 <h3>空域查詢</h3>
@@ -79,7 +94,17 @@
             <li>
                 <p><a href="#">登入</a></p>
             </li>
+            <!-- <li class="language">
+            </li> -->
         </ul>
+        <div class="language">
+            <select name="">
+                <option value="">EN</option>
+                <option value="">日文</option>
+                <option value="">簡體</option>
+                <option value="">繁體中文</option>
+            </select>
+        </div>
     </div>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
