--- a/JH/news-02.html
+++ b/JH/news-02.html
@@ -43,7 +43,7 @@
             <li><h3><a href="contact.html"">聯絡我們  ｜  CONTACT</a></h3></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
