--- a/JH/product-02.html
+++ b/JH/product-02.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
             <li><h3><a href="contact.html"">聯絡我們  ｜  CONTACT</a></h3></li>
         </ul>
     </div>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
     <script src="js/script-right.js"></script>
 
